--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
-    "eslint.codeActionsOnSave.rules": {
-        
-        "source.fixAll.eslint": true
-    },
-    "eslint.validate": ["javascript"]
+  "editor.formatOnSave": true,
+  "editor.codeActionsOnSave": {
+    "source.fixAll": true
+  },
+  "eslint.format.enable": true,
 }
